# ProTest

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
doc/: DB.markdown  DB.md  Makefile.am  README
m4/: ax_have_qt.m4
man/: ProCalc.1
src/: .gitignore  Makefile.am  main.cpp  main_main.cpp
src/build-qt-Desktop-Debug/: .gitignore  Makefile  moc_dialog1.cpp  moc_dialog2.cpp  moc_dialog3.cpp  moc_mainwindow.cpp  moc_mainwindow_stud.cpp  moc_mainwindow_teach.cpp  qt  remember.lp  ui_dialog1.h  ui_dialog1_copy.h  ui_dialog2.h  ui_dialog3.h  ui_mainwindow.h  ui_mainwindow_stud.h  ui_mainwindow_teach.h
src/db/: data.sqlite  data.sqlite-journal
src/files/: Arrays.txt  Cycles_en.txt  Recursion_en.txt  Strings_en.txt  din.txt  din_eng.txt  file.txt  file_eng.txt  pointer.txt  pointer_eng.txt  struct.txt  struct_eng.txt
src/headers/: config.h  database.h  main_menu.h  mainwindow_teach.cpp  sha256.h  student_menu.h  teacher_menu.h  tests_main_header.h
src/libs/: .gitignore  SM.cpp  func_student.cpp  main_menu.cpp  teacher.cpp  teacher_menu.cpp
src/libs/db/: database.cpp  sha256.cpp
src/qt/: dialog1.cpp  dialog1.h  dialog1.ui  dialog2.cpp  dialog2.h  dialog2.ui  dialog3.cpp  dialog3.h  dialog3.ui  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow_stud.cpp  mainwindow_stud.h  mainwindow_stud.ui  mainwindow_teach.cpp  mainwindow_teach.h  mainwindow_teach.ui  qt.pro  qt.pro.user.1dd026f.4.9-pre1  qt.pro.user.4.8-pre1  qt_main.cpp
src/scripts/: db.sh
